<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonmid.profilerecyclerview.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launcher_round"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_1"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">
                <TextView
                    android:id="@+id/txt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_2"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/txt_1"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/txt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_3"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/txt_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_4"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/txt_3"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/txt_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/txt_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_6"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/txt_5"/>
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_1"
        android:background="@color/colorPrimary"
        android:padding="10dp">
        <TextView
            android:id="@+id/txt_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_7"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/txt_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_8"
            android:textSize="13sp"
            android:textColor="@android:color/white"
            android:layout_below="@id/txt_7"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

</RelativeLayout>
